# meshcoretel-visualizer

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  server.js
native/: CMakeLists.txt  README.md  meshcoretel-viewer.cpp
native/linux/: CMakeLists.txt  README.md  jsmn.c  jsmn.h  meshcoretel-viewer.cpp
public/: index.html
scripts/: start-native.js
